unpackaged/main/default/objects/Fund_Drawdown__c/Fund_Drawdown__c.object-meta.xml
<CustomObject>
    <description>To capture the total amount the fund will draw, which in turn will be split into multiple capital calls</description>
    <label>Fund Drawdown</label>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>DD No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Drawdowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>