unpackaged/main/default/objects/Fund_Drawdown__c/fields/Call_Amount__c.field-meta.xml
<CustomField>
    <fullName>Call_Amount__c</fullName>
    <formula>(Capital_Amount__c  +  Management_Fee__c  +  Other_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>