unpackaged/main/default/objects/Fund_Drawdown__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <inlineHelpText>Warning: If you edit this field, Capital Call(s) linked with this Fund Drawdown will not reflect the change.</inlineHelpText>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>