unpackaged/main/default/objects/Fund_Drawdown__c/fields/Capital_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Amount__c</fullName>
    <label>Capital Amount</label>
    <summarizedField>Capital_Call__c.Capital_Amount__c</summarizedField>
    <summaryForeignKey>Capital_Call__c.Fund_Drawdown__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>