unpackaged/main/default/objects/Fund_Drawdown__c/fields/Capital_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Capital_Amount_Formula__c</fullName>
    <formula>Capital_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>