unpackaged/main/default/objects/Fund_Drawdown__c/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Name</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Fund Drawdown</relationshipLabel>
    <relationshipName>Fund_Drawdown</relationshipName>
    <type>Lookup</type>
</CustomField>