unpackaged/main/default/objects/Fund_Drawdown__c/fields/Management_Fee_Formula__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Formula__c</fullName>
    <formula>Management_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>