unpackaged/main/default/objects/Fund_Drawdown__c/fields/Other_Fee__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee__c</fullName>
    <label>Other Fee</label>
    <summarizedField>Capital_Call__c.Other_Fee__c</summarizedField>
    <summaryForeignKey>Capital_Call__c.Fund_Drawdown__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>