unpackaged/main/default/objects/Fund_Drawdown__c/fields/Other_Fee_Formula__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Formula__c</fullName>
    <formula>Other_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>