unpackaged/main/default/objects/Fund_Drawdown__c/fields/Total_Call_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Call_Amount_Received__c</fullName>
    <label>Total Call Amount Received</label>
    <summarizedField>Capital_Call__c.Call_Amount_Received__c</summarizedField>
    <summaryForeignKey>Capital_Call__c.Fund_Drawdown__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>