unpackaged/main/default/objects/Fund_Drawdown__c/fields/Total_Call_Amount_Received_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Call_Amount_Received_Formula__c</fullName>
    <formula>Total_Call_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Call Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>