unpackaged/main/default/objects/Fund_Drawdown__c/validationRules/FundNameChange.validationRule-meta.xml
<ValidationRule>
    <fullName>FundNameChange</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Fund_Name__c )</errorConditionFormula>
    <errorDisplayField>Fund_Name__c</errorDisplayField>
    <errorMessage>Value once set cannot be changed.</errorMessage>
</ValidationRule>