unpackaged/main/default/objects/Fund_Drawdown__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund_Name__c</columns>
    <columns>Capital_Amount__c</columns>
    <columns>Total_Call_Amount_Received__c</columns>
    <columns>Amount_Due__c</columns>
    <columns>Call_Date__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>